--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,16 @@ pre {
   line-height: 80px;
 }
 
+.bundles li {
+  position: relative;
+}
+
+.bundles .info {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
 .bundle:hover {
   background: gray;
   color: white;
