locals_route changed to locals_middleware, route is now split from router

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ pre {
   padding: 10px;
   margin-bottom: 20px;
 
+  font-size: .85em;
   background: whitesmoke;
   text-align: center;
   border-radius: 10px;
