--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@ h1, h2 {
   font-weight: 300;
 }
 
+h1 {
+  margin-bottom: 1em;
+}
+
 h2 {
   margin-bottom: 1em;
 }
@@ -15,8 +19,9 @@ pre {
   padding: 20px;
 }
 
-.header {
-  margin-bottom: 2em;
+p {
+  color: gray;
+  font-size: .85em;
 }
 
 .footer {
